# lines-of-action

./: .gitignore  README.md  config.json  flake.nix  main.py  pyproject.toml
ai/: agent.py  ai.py  alpha_zero.py  mcts.py  model.py  spg.py  state.py
game/: board.py  game.py  objects.py
